qbittorrent/Manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
spec:
  replicas: 1
  serviceName: qbittorrent
  template:
    spec:
      containers:
      - name: qbittorrent
        image: lscr.io/linuxserver/qbittorrent:latest
        ports:
        - name: ui
          containerPort: 8080
        volumeMounts:
        - name: qbittorrent-config
          mountPath: /config
        - name: qbittorrent-downloads
          mountPath: /downloads
  volumeClaimTemplates:
  - metadata:
      name: qbittorrent-config
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: local-path
      resources:
        requests:
          storage: 256Mi
  - metadata:
      name: qbittorrent-downloads
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: local-path
      resources:
        requests:
          storage: 5Gi
