qbittorrent/Manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: qbittorrent.media
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: qbittorrent
            port: 
              number: 8080
